--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./main.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/variable.js"></script>
+    <script src="./js/function.js"></script>
+    <script src="./js/conditional.js"></script>
+    <script defer src="./js/domapi.js"></script>
   </head>
   <body>
-    <h1>js 데이터종류 정리</h1>
+    <h1>js 데이터 정리</h1>
+    <div class="box">BOX!!</div>
+    <div class="box">BOX!!</div>
+    <div class="box">BOX!!</div>
+    <div class="box">BOX!!</div>
+    <div class="box">BOX!!</div>
   </body>
 </html>
