--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js/function.js"></script>
     <script src="./js/conditional.js"></script>
     <script defer src="./js/domapi.js"></script>
+    <script defer src="./js/methodChaining.js"></script>
   </head>
   <body>
     <h1>js 데이터 정리</h1>
